--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^11.11.11",
     "moive": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
